<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="84dp"
        android:contentDescription="@string/this_is_logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:background="@drawable/bg_btn_add_it"
        android:fontFamily="@string/sans_serif_thin"
        android:paddingBottom="8dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="8dp"
        android:text="@string/str_add_drop"
        android:textAllCaps="false"
        android:textColor="@color/btn_add_color"
        android:textSize="28sp"

        tools:targetApi="jelly_bean" />

</RelativeLayout>